--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -8,6 +8,10 @@
 
 .clicky {
 	cursor: pointer;
+	background-color: #fff;
+}
+.clicky:hover {
+	background-color: rgb(255, 241, 194);
 }
 
 body {
@@ -15,6 +19,5 @@ body {
 }
 
 table, table th, table td {
-	border: 1px solid black;
-	cursor: default;
+	border: 1px solid #333;
 }
