--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -2,6 +2,42 @@
 	display: none;
 }
 
+.navbar {
+	position: relative;
+	background-color: #333;
+	overflow: hidden;
+}
+
+.navbar a {
+	display: block;
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.navbar a:hover {
+	background-color: #ddd;
+	color: black;
+}
+  
+.navbar a.active {
+	background-color: #04AA6D;
+	color: white;
+}
+
+.navbar-right {
+	float: right;
+}
+
+.navbar-right img {
+	padding: none;
+	height: 20px;
+	width: auto;
+}
+
 table {
 	border-collapse: collapse;
 	border: 1px solid black;
