--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -63,9 +63,12 @@
 	color: rgb(255, 235, 185);
 }
 
-body {
+.content {
 	max-width: max-content;
 	margin: auto;
+}
+
+body {
 	font-family: sans-serif;
 	background-color: #222;
 	color: #eee;
