Improve colors and layouts

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -13,29 +13,38 @@
 	float: left;
 	color: #f2f2f2;
 	text-align: center;
-	padding: 14px 16px;
+	padding: 16px 16px;
 	text-decoration: none;
 	font-size: 17px;
 }
 
 .navbar a:hover {
-	background-color: #ddd;
-	color: black;
+	background-color: rgb(217, 155, 0);
 }
   
 .navbar a.active {
-	background-color: #04AA6D;
+	background-color: rgb(217, 155, 0);
 	color: white;
 }
 
 .navbar-right {
 	float: right;
+	white-space: nowrap;
 }
 
 .navbar-right img {
 	padding: none;
 	height: 20px;
 	width: auto;
+}
+
+.navbar-right * {
+	display: inline-block;
+}
+
+.navbar-right .unbreak {
+	padding: 16px 16px;
+	vertical-align: top;
 }
 
 .error {
@@ -81,7 +90,7 @@ table, table th, table td {
 }
 
 a:link, a:visited {
-	color: rgb(0, 197, 0);
+	color: rgb(215, 215, 215);
 }
 
 h1 {
