--- a/frontend/modal.css
+++ b/frontend/modal.css
@@ -11,7 +11,8 @@
 	height: 100%; /* Full height */
 	overflow: auto; /* Enable scroll if needed */
 	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+	backdrop-filter: blur(1px);
 }
 
 /* Modal Content/Box */
@@ -21,6 +22,9 @@
 	padding: 20px;
 	border: 1px solid #888;
 	width: 80%; /* Could be more or less, depending on screen size */
+	box-shadow:
+		0 4px 8px 0 rgba(255, 255, 255, 0.15),
+		0 6px 20px 0 rgba(255, 255, 255, 0.14);
 }
 
 /* The Close Button */
