--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -18,12 +18,8 @@
 	font-size: 17px;
 }
 
-.navbar a:hover {
-	background-color: rgb(217, 155, 0);
-}
-  
-.navbar a.active {
-	background-color: rgb(217, 155, 0);
+.navbar a.active, .navbar a:hover {
+	background-color: rgb(173, 124, 0);
 	color: white;
 }
 
@@ -42,9 +38,18 @@
 	display: inline-block;
 }
 
-.navbar-right .unbreak {
+.pad-heavy {
 	padding: 16px 16px;
+}
+
+.align-top {
 	vertical-align: top;
+}
+
+.side-by-side {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
 }
 
 .error {
@@ -55,7 +60,7 @@
 	cursor: pointer;
 }
 .clicky:hover {
-	background-color: rgb(217, 155, 0);
+	background-color: rgb(173, 124, 0);
 }
 
 .right-center {
@@ -81,12 +86,17 @@ body {
 	font-family: sans-serif;
 	background-color: #222;
 	color: #eee;
+	padding: 16px;
 }
 
 table, table th, table td {
 	border-collapse: collapse;
-	border: 1px solid #aaa;
-	padding: 4px;
+	border: 1px solid rgb(57,63,74);
+	padding: 12px;
+}
+
+.banded-table tbody:nth-of-type(even) {
+	background-color: rgb(42, 46, 54);
 }
 
 a:link, a:visited {
@@ -95,4 +105,29 @@ a:link, a:visited {
 
 h1 {
 	margin-bottom: 0;
+}
+
+button, input, textarea {
+	background-color: #222;
+	border-color: #ddd;
+	border-style: solid;
+	border-width: thin;
+	padding: 8px;
+	margin: 4px;
+	color: #ddd;
+	box-shadow: 0 4px 8px 0 rgba(57, 63, 74, 1), 0 6px 10px 0 rgba(57, 63, 74, 1);
+}
+
+button, input[type=button], input[type=submit] {
+	background-color: rgb(42, 46, 54);
+	cursor: pointer;
+	text-align: center;
+}
+
+input, textarea {
+	min-width: 250px;
+}
+
+label {
+	margin: 4px;
 }
